--- a/login.html
+++ b/login.html
@@ -54,6 +54,7 @@
 <body>
 
     <div class="login-container">
+        <p>TEST</p>
         <h2>Login</h2>
         <form onsubmit="return validateLogin()">
             <input type="text" id="username" placeholder="Username" required>
